# sudoku-generator

./: .gitignore  Cargo.toml  search.sh
src/: emit_problem.rs  formula_builder.rs  iter_singleton.rs  main.rs  positive_i32.rs  sat_solver.rs  sudoku.rs  visualize_solution.rs
src/formula_builder/: arithmetic.rs  bit_vector.rs  cardinality.rs  gate.rs  literal.rs  variable.rs
