[package]
name = "sudoku-generator"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
thiserror = "1"

[dependencies.tokio]
version = "1"
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
]
